@@ -1,143 +1,120 @@
-在Cassandra中创建一张表
+在YCSB项目中，有两个hbase相关的目录，这里尝试的是hbase(2.y)目录
+
+# 1 启动hbase server
+
+# 2 Set up YCSB
+
+# 3 创建一张hbase表
 
 ```
-cqlsh> create keyspace ycsb WITH REPLICATION = {'class' : 'SimpleStrategy', 'replication_factor': 3 };
-cqlsh> USE ycsb;
-cqlsh> create table usertable (
-    y_id varchar primary key,
-    field0 varchar,
-    field1 varchar,
-    field2 varchar,
-    field3 varchar,
-    field4 varchar,
-    field5 varchar,
-    field6 varchar,
-    field7 varchar,
-    field8 varchar,
-    field9 varchar);
+hbase(main):001:0> n_splits = 10 # HBase recommends (10 * number of regionservers)
+hbase(main):002:0> create 'usertable', 'family', {SPLITS => (1..n_splits).map {|i| "user#{1000+i*(9999-1000)/n_splits}"}}
 ```
 
-先下载
+在运行create那行命令的时候出错
 
-```
-curl -O --location https://github.com/brianfrankcooper/YCSB/releases/download/0.17.0/ycsb-0.17.0.tar.gz
-```
+* 报错1：ERROR: KeeperErrorCode = ConnectionLoss for /hbase/master
 
-解压后进入主目录
-
-运行YCSB
-
-```
-bin/ycsb.sh load basic -P workloads/workloada
-bin/ycsb.sh run basic -P workloads/workloada
-```
-
-![image-20220627100138759](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20220627100138759.png)
-
-* 尝试JDK11编译Cassandra JDK16运行
-
-  ![image-20220627100431244](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20220627100431244.png)
-
-* 尝试JDK14编译Cassandra然后jdk16运行
-
-  在jdk16环境中执行命令`./cassandra -R`报错
+  在log日志中的错误是`ERROR master.HMaster: Failed to become active master
+  org.apache.hadoop.hbase.DroppedSnapshotException: region: master:store,,1.1595e783b53d99cd5eef43b6debb2682.`
 
   ```
-  Exception (java.lang.AssertionError) encountered during startup: java.lang.reflect.InaccessibleObjectException: Unable to make field private int java.io.FileDescriptor.fd accessible: module java.base does not "opens java.io" to unnamed module @32b260fa
-  java.lang.AssertionError: java.lang.reflect.InaccessibleObjectException: Unable to make field private int java.io.FileDescriptor.fd accessible: module java.base does not "opens java.io" to unnamed module @32b260fa
-  	at org.apache.cassandra.utils.FBUtilities.getProtectedField(FBUtilities.java:672)
-  	at org.apache.cassandra.utils.NativeLibrary.<clinit>(NativeLibrary.java:81)
-  	at org.apache.cassandra.service.CassandraDaemon.setup(CassandraDaemon.java:198)
-  	at org.apache.cassandra.service.CassandraDaemon.activate(CassandraDaemon.java:620)
-  	at org.apache.cassandra.service.CassandraDaemon.main(CassandraDaemon.java:732)
-  Caused by: java.lang.reflect.InaccessibleObjectException: Unable to make field private int java.io.FileDescriptor.fd accessible: module java.base does not "opens java.io" to unnamed module @32b260fa
-  	at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:357)
-  	at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:297)
-  	at java.base/java.lang.reflect.Field.checkCanSetAccessible(Field.java:177)
-  	at java.base/java.lang.reflect.Field.setAccessible(Field.java:171)
-  	at org.apache.cassandra.utils.FBUtilities.getProtectedField(FBUtilities.java:667)
-  	... 4 more
-  ERROR [main] 2022-07-03 01:21:48,848 CassandraDaemon.java:754 - Exception encountered during startup
-  java.lang.AssertionError: java.lang.reflect.InaccessibleObjectException: Unable to make field private int java.io.FileDescriptor.fd accessible: module java.base does not "opens java.io" to unnamed module @32b260fa
-  	at org.apache.cassandra.utils.FBUtilities.getProtectedField(FBUtilities.java:672)
-  	at org.apache.cassandra.utils.NativeLibrary.<clinit>(NativeLibrary.java:81)
-  	at org.apache.cassandra.service.CassandraDaemon.setup(CassandraDaemon.java:198)
-  	at org.apache.cassandra.service.CassandraDaemon.activate(CassandraDaemon.java:620)
-  	at org.apache.cassandra.service.CassandraDaemon.main(CassandraDaemon.java:732)
-  Caused by: java.lang.reflect.InaccessibleObjectException: Unable to make field private int java.io.FileDescriptor.fd accessible: module java.base does not "opens java.io" to unnamed module @32b260fa
-  	at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:357)
-  	at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:297)
-  	at java.base/java.lang.reflect.Field.checkCanSetAccessible(Field.java:177)
-  	at java.base/java.lang.reflect.Field.setAccessible(Field.java:171)
-  	at org.apache.cassandra.utils.FBUtilities.getProtectedField(FBUtilities.java:667)
-  	... 4 common frames omitted
+  Caused by: java.lang.NoSuchMethodError: 'org.apache.hadoop.hdfs.DFSInputStream$ReadStatistics org.apache.hadoop.hdfs.client.HdfsDataInputStream.getReadStatistics()'
   ```
 
-  * 解决：尝试在`cassandra-env.sh`文件末尾添加JVM_OPTS参数
+  之后发现运行`status`这种命令也报的是同样的错，说明hbase的环境出了问题（后来认为是hadoop与hbase环境之间不匹配的问题，hbase要使用hadoop以前存在的方法）
 
-    ````
-    JVM_OPTS="$JVM_OPTS --illegal-access=permit"
-    ````
+  * 尝试1 for 1：重新编译hbase,添加hadoop3.0即-Dhadoop.profile=3.0
+  
+    `mvn clean install -Denforcer.skip -DskipTests -Dhadoop.profile=3.0 -Psite-install-step`
+  
+    编译报错
+  
+    ![image-20221031114812677](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20221031114812677.png)
+  
+    重新又运行了一次，编译成功了
+  
+    ![image-20221031210751217](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20221031210751217.png)
+  
+    直接测试一下`hbase shell`里的status命令，发现还是同样的问题
+    
+    但报错终于不同了
+    
+    * 报错1.1：`ERROR master.HMaster: Failed to become active master
+      java.lang.NoSuchMethodError: 'org.apache.hadoop.hdfs.protocol.DatanodeInfo[] org.apache.hadoop.hdfs.protocol.LocatedBlock.getLocations()'`
+      
+      * 失败：尝试1 for 错误1.1：把低版本的hadoop中的该方法拷到高版本中
+      
+        `ERROR master.HMaster: Failed to become active master
+        org.apache.hadoop.ipc.RemoteException(java.lang.NoSuchMethodError): 'boolean org.apache.hadoop.hdfs.protocol.LocatedBlock.isStriped()'`
+    
 
-  成功运行
+---
 
-  ![image-20220703165317622](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20220703165317622.png)
+**尝试**直接使用官方下载的hbase bin 2.4.14文件
 
-  ![image-20220703165347637](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20220703165347637.png)
+* 报错1：
+
+  ```
+  ERROR: org.apache.hadoop.hbase.PleaseHoldException: Master is initializing
+  	at org.apache.hadoop.hbase.master.HMaster.checkInitialized(HMaster.java:2812)
+  ```
+
+---
+
+**尝试**直接使用官方下载的hbase bin 2.3.0文件（环境为jdk8+hadoop3.3.1+hbase2.3）
+
+* 报错1：`ERROR master.HMaster: Failed to become active master java.io.EOFException: Cannot seek after EOF`
+
+  * 成功：尝试1 for 1：删除hdfs fs里的/hbase/MasterData，结果环境恢复了
+
+    ![image-20221101225150167](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20221101225150167.png)
+
+    ![image-20221101225304915](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20221101225304915.png)
+
+    目前status命令和create命令能够运行
+
+    ```
+    hbase(main):001:0> n_splits = 10 # HBase recommends (10 * number of regionservers)
+    hbase(main):002:0> create 'usertable', 'family', {SPLITS => (1..n_splits).map {|i| "user#{1000+i*(9999-1000)/n_splits}"}}
+    ```
+
+    ![image-20221101225627471](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20221101225627471.png)
+
+    载入workload
+
+    ```
+    bin/ycsb load hbase20 -P workloads/workloada -cp /HBASE-HOME-DIR/conf -p table=usertable -p columnfamily=family
+    注意修改HBASE-HOME-DIR
+    ```
+  
+    * 报错1.1：
+    
+      ```
+      File "/home/iscas/Downloads/ycsb/ycsb-0.17.0/bin/ycsb", line 228
+                except subprocess.CalledProcessError, err:
+                                                    ^
+            SyntaxError: invalid syntax
+      ```
+    
+      ycsb是python文件，主要原因是我在python3环境中运行ycsb（python2），通过anaconda切换到python27环境中运行解决
+    
+      成功load
+    
+      ![image-20221102110930437](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20221102110930437.png)
+    
+      运行workload
+    
+      ```
+      bin/ycsb run hbase20 -P workloads/workloada -cp /HBASE-HOME-DIR/conf -p table=usertable -p columnfamily=family
+      ```
+    
+      成功运行
+    
+      ![image-20221102111403236](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20221102111403236.png)
 
 
 ---
 
-Cassandra的heap size在`cassandra-env.sh`中设置（与JVM相关的参数都可以在该文件中设置）
-
-* 修改workload的recordcount
-
-  * 方法1：
-
-    创建一个文件large.dat里面一行内容recordcount=100000000
-
-    ```
-    ./bin/ycsb load basic -P workloads/workloada -P large.dat
-    ```
-
-  * 方法2：
-
-    ```
-    ./bin/ycsb load basic -P workloads/workloada -p recordcount=100000000
-    ```
-
-* 保存状态到文件中去
-
-  ```
-  ./bin/ycsb load basic -P workloads/workloada -P large.dat -s > load.dat
-  ```
-
-* 修改GC的种类
-
-  修改在conf文件夹下的jvm11-server.options中的GC种类`-XX:UseZGC`
-
-  可以在Cassandra启动的时候看到如下信息，说明更改GC成功
-
-  ![image-20220710201914166](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20220710201914166.png)
-
-* 修改heap-size的大小
-
-  修改conf文件夹下的cassandra-env.sh文件，MAX_HEAP_SIZE是分给java heap总的内存空间，HEAP_NEWSIZE是分给young generation的内存空间，两个参数要么一起设置，要么不设置
-
-  ```
-  The main trade-off for the young generation is that the larger it is,the longer GC pause times will be.The shorter it is,the more expensive GC will be (usually).
-  The example HEAP_NEWSIZE assumes a modern 8-core+machine for decent pause times.If in doubt,and if you do not particularly want to tweak,go with 100 MB per phystcal CPU core.
-  ```
-
-  HEAP_NEWSIZE取(CPU核数的100倍，¼ of MAX_HEAP_SIZE)两个值中的较小值
-
-  Cassandra默认的heap-size的大小应该是7.750GB，如下图所示
-
-  ![image-20220710205727129](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20220710205727129.png)
-
-  * 尝试修改参数`MAX_HEAP_SIZE="4G"`与`HEAP_NEWSIZE="1200M"`
-
-    如下图所示，参数修改成功
-
-    ![image-20220710211502457](https://raw.githubusercontent.com/liang636600/cloudImg/master/images/image-20220710211502457.png)
+* 附一个错误：报的错是`ERROR master.HMaster: Failed to become active master org.apache.hadoop.ipc.RemoteException(java.io.IOException): File /user/iscas/tmp/hbase/.tmp/hbase.version could only be written to 0 of the 1 minReplication nodes. There are 0 datanode(s) running and 0 node(s) are excluded in this operation.`这个错误与hadoop相关，导致dataNode没有启动成功，具体解决是DataNode与NameNode的current文件夹下的version文件中clusterID设置一样（以NameNode为准）
 
